--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "cleverfit",
+  "homepage": "https://Yau1heni.github.io/cleverfit/",
   "private": true,
   "version": "1.0.0",
   "type": "module",
@@ -10,6 +11,8 @@
   },
   "scripts": {
     "start": "vite",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "build": "vite build",
     "preview": "vite preview",
     "lint:css": "stylelint ./src/**/*.css",
@@ -31,6 +34,7 @@
     "axios": "^1.6.7",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.10",
+    "gh-pages": "^6.1.1",
     "history": "^5.3.0",
     "lottie-react": "^2.4.0",
     "normalize.css": "^8.0.1",
@@ -44,7 +48,7 @@
   },
   "devDependencies": {
     "@types/css-modules": "^1.0.5",
-    "@types/node": "^20.10.4",
+    "@types/node": "^20.12.7",
     "@types/react": "^18.2.42",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^5.46.1",
