--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "cleverfit",
-  "homepage": "https://Yau1heni.github.io/cleverfit/",
-  "private": true,
+  "homepage": "https://Yau1heni.github.io/cleverfit",
   "version": "1.0.0",
   "type": "module",
   "engines": {
